--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,14 +21,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "@storybook/addon-actions": "^4.0.0-alpha.23",
-    "@storybook/addon-links": "^4.0.0-alpha.23",
-    "@storybook/addons": "^4.0.0-alpha.23",
-    "@storybook/react": "^4.0.0-alpha.23",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.4",
-    "babel-runtime": "^7.0.0-beta.3"
-  }
+  ]
 }
