--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-dev-utils": "^6.0.3",
     "react-dom": "^16.5.2",
     "resolve": "1.8.1",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
@@ -75,7 +75,8 @@
     "@storybook/react": "^4.0.0-alpha.23",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
-    "babel-runtime": "^7.0.0-beta.3"
+    "babel-runtime": "^7.0.0-beta.3",
+    "node-sass": "^4.9.3"
   },
   "jest": {
     "collectCoverageFrom": [
