--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react-app": "^5.0.2",
     "bfj": "6.1.1",
     "bootstrap": "3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
