--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 9009 -s ./public",
+    "build-storybook": "build-storybook -s ./public"
   },
   "eslintConfig": {
     "extends": "react-app"
