--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@storybook/addon-knobs": "^3.4.11",
+    "@storybook/addon-options": "^3.4.11",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -13,7 +14,6 @@
     "babel-plugin-named-asset-import": "^0.2.2",
     "babel-preset-react-app": "^5.0.2",
     "bfj": "6.1.1",
-    "bootstrap": "3.3.7",
     "bootstrap-sass": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -48,6 +48,7 @@
     "react-dom": "^16.5.2",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
+    "storybook-readme": "^4.0.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
