--- a/firebase.json
+++ b/firebase.json
@@ -6,8 +6,12 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "headers": [
-      { "source":"/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}] }
-    ]
+    "headers": [ {
+      "source" : "**/*.html",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "private, max-age=0, no-cache"
+      } ]
+    } ]
   }
 }
