--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@storybook/addon-info": "^3.4.11",
     "@storybook/addon-links": "^4.0.0-alpha.23",
     "@storybook/addon-notes": "^3.4.11",
+    "@storybook/addon-storysource": "^4.0.2",
     "@storybook/addon-viewport": "^3.4.11",
     "@storybook/addons": "^4.0.0-alpha.23",
     "@storybook/react": "^4.0.0-alpha.23",
